# imitation_nav

./: .gitignore  CMakeLists.txt  package.xml
config/: params.yaml
config/maps/: map.yaml
config/topo_map/: topomap.yaml
include/imitation_nav/: dynamic_obstacle_detector.hpp  imitation_nav_node.hpp  pointcloud_processor.hpp  template_matching.hpp  topo_localizer.hpp  visibility_control.h
launch/: nav_executor.launch.py
src/: dynamic_obstacle_detector.cpp  imitation_nav_node.cpp  pointcloud_processor.cpp  template_matching.cpp  topo_localizer.cpp
